consolidate copyright notices; update printed copyright notices; documentation
Following the README remark explaining how to interpret compact copyright
notices with dashes according to maintain.texi {Copyright Notices} (already
added before this change set), change some copyright notices to be compact.
Update some printed copyright notices.

* README: Update copyright notice.
* Makefile.am: Likewise.
* bin/jitter-config.in.m4sh: Likewise.
* scripts/generate-fast-branches.in.m4sh: Likewise.
* doc/jitter.texi: Likewise.

* example-vms/jitterlisp/doc/jitterlisp.texi: Update copyright notice.  Comment.
* example-vms/structured/doc/structured.texi: Likewise.  Documentation.

* m4-utility/jitter-script.m4sh: Update copyright notice.
(version): Update printed copyright notice
* example-vms/jitterlisp/jitterlisp-main.c: Update copyright notice.
(the_argp_program_version_hook): Update printed copyright notice
* example-vms/structured/structured-main.c: Update copyright notice.
(structured_version): Update printed copyright notice.
* templates/vm-main.c: Update copyright notice.
(the_argp_program_version_hook): Update printed copyright notice.

--- a/doc/jitter.texi
+++ b/doc/jitter.texi
@@ -1,7 +1,7 @@
 \input texinfo.tex @c This is -*- Texinfo -*-.
 
 @c This file is part of the GNU Jitter manual.
-@c Copyright (C) 2017, 2019, 2020, 2021, 2022  Luca Saiu
+@c Copyright (C) 2017, 2019-2022  Luca Saiu
 @c Written by Luca Saiu
 
 @c Permission is granted to copy, distribute and/or modify this
@@ -204,7 +204,7 @@ This is the manual for GNU Jitter
 last updated on @value{UPDATED}), an efficient virtual machine generator.
 
 @noindent
-Copyright @copyright{} 2017, 2019, 2020, 2021  Luca Saiu.@*
+Copyright @copyright{} 2017, 2019-2022  Luca Saiu.@*
 Written by Luca Saiu.
 
 @quotation
