--- a/README
+++ b/README
@@ -88,7 +88,7 @@ A copyright notice specifying two years saparated by a dash, for example as in
 the range, inclusive.  For example
   Copyright (C) 2016-2020 Foo
 is an abbreviation of
-  Copyright (C) 2016, 2017, 2018, 2020 Foo
+  Copyright (C) 2016, 2017, 2018, 2019, 2020 Foo
 Abbreviated notices may be combined, for example in
   Copyright (C) 2014-2016, 2018, 2020-2022 Foo
 which is an abbreviation of
